[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/Sprites/PetitePiece_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Sprites/PetitePieceShadow_SpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Coin.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "rotate",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "rotate",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=21]
radius = 76.0

[sub_resource type="Gradient" id=22]
colors = PoolColorArray( 0.929412, 0.980392, 0.0156863, 0.729412, 1, 0, 0, 0.831373 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="ParticlesMaterial" id=24]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 150, 0 )
initial_velocity = 75.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 23 )

[sub_resource type="Animation" id=25]
resource_name = "wave"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 6 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}

[node name="Coin" type="Node2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, 18 )
frames = SubResource( 2 )
animation = "rotate"

[node name="CoinSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 21 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
one_shot = true
process_material = SubResource( 24 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wave = SubResource( 25 )

[connection signal="animation_finished" from="CoinSprite" to="." method="_on_CoinSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
